--- a/index.html
+++ b/index.html
@@ -13,10 +13,32 @@
 <body>
     <div class="main-container">
         <main>
-            <h1>NASA</h1>
+            <h1 id="NASA-title">NASA</h1>
         </main>
         <section>
-            <h1>Hello World</h1>
+            <section id="social" class="triplethreat">
+                <h1>Social Media</h1>
+                <p>
+                    Twitter - @nasa <br>
+                    Facebook -fb.com/nasa <br>
+                    Instagram - @nasa <br>
+                    Youtube - youtube.com/NASA
+                </p>
+            </section>
+            <section id="info" class="triplethreat">
+                <h1>Office Info</h1>
+                <p>
+                    Public Communications Office <br>
+                    NASA Headquarters <br>
+                    300 E. Street SW Suite 5R30 <br>
+                    Washington DC 20546 <br>
+                    (202)358-0001 (Office) <br>
+                    (202)358-4338 (Fax)
+                </p>
+            </section>
+            <section id="contact" class="triplethreat">
+                <h1>Contact Us</h1>
+            </section>
         </section>
     </div>
 </body>
